Added drawings, fancy and si headers

--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,10 @@
 \setlength{\parindent}{0pt}
 
 \input{headers/default}
+\input{headers/si}
 % \input{headers/bibliography}
+% \input{headers/drawings}
+% \input{headers/fancy}
 
 \begin{document}
 \maketitle
