Refreshing and updating to 2019

--- a/headers/default.tex
+++ b/headers/default.tex
@@ -15,7 +15,7 @@
 \usepackage{cool}
 \Style{DSymb={\mathrm{d}},IntegrateDifferentialDSymb={\mathrm{d}}}
 
-\usepackage[math-style=ISO,bold-style=ISO,vargreek-shape=unicode]{unicode-math}
+\usepackage[math-style=ISO,bold-style=ISO]{unicode-math}
 \defaultfontfeatures{Ligatures=TeX,ExternalLocation=fonts/,Extension=.otf}
 \setmathfont{XITSMath}
 \setmathfont[range={\mathcal,\mathbfcal},StylisticSet=1]{XITSMath}
