--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{scrartcl}
 \title{Title}
-\author{A. Saltini}
+\author{I. Saltini}
 \date{\today}
 \setlength{\parindent}{0pt}
 
@@ -12,6 +12,5 @@
 
 \begin{document}
 \maketitle
-
 
 \end{document}
